feat(backend): add new endpoint that get pipelines by name
Add new endpoint getPipelineByName that take in consideration the current namespace,
because the name is unique within a namespace only.

Fix: https://github.com/kubeflow/pipelines/issues/7003
